name:                sd-fastspringauthentication
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shlok/sd-fastspringauthentication
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall
    default-extensions:  OverloadedStrings
    exposed-modules:     SD.FastSpringAuthentication
    build-depends:       base >= 4.7 && < 5
                       , base16-bytestring >= 0.1.1.6
                       , bytestring >= 0.10.8.1
                       , containers >= 0.5.7.1
                       , cryptohash >= 0.11.9
                       , snap-core >= 1.0.0.0
                       , text >= 1.2.2.1
                       , text-icu >= 0.7.0.1
                       , utf8-string >= 1.0.1.1

source-repository head
    type:     git
    location: https://github.com/shlok/sd-fastspringauthentication
